# poetry-demo

./: .gitignore  README.md  dodo.py  pyproject.toml
.github/workflows/: demo-pipeline.yml
src/trasil/dynamichistogram/: __init__.py  std.py
src/trasil/dynamichistogram/classichistogram/: hist.py
src/trasil/dynamichistogram/cli/: __main__.py  parser.py
tests/classichistogram/: test_interval.py
trasil/dynamichistogram/classichistogram/: __init__.py  hist.py
trasil/dynamichistogram/cli/: __main__.py  demoscene.py  parser.py
